chore: added SvelteKit and esbuild to the list of trusted deps

--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
   "types": "./dist/index.d.ts",
   "type": "module",
   "trustedDependencies": [
+    "@sveltejs/kit",
+    "esbuild",
     "svelte-preprocess"
   ]
 }
