--- a/package.json
+++ b/package.json
@@ -47,18 +47,22 @@
     "svelte": "^4.0.0"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.2.2",
-    "@sveltejs/kit": "^2.5.18",
-    "@sveltejs/package": "^2.3.2",
-    "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "@eslint/js": "^9.11.0",
+    "@sveltejs/adapter-auto": "^3.2.5",
+    "@sveltejs/kit": "^2.5.28",
+    "@sveltejs/package": "^2.3.5",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.11.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.5",
-    "publint": "^0.2.8",
-    "svelte": "^4.2.18",
-    "svelte-check": "^3.8.4",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.3"
+    "prettier-plugin-svelte": "^3.2.6",
+    "publint": "^0.2.11",
+    "svelte": "^4.2.19",
+    "svelte-check": "^4.0.2",
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0",
+    "vite": "^5.4.7"
   },
   "svelte": "./dist/index.js",
   "types": "./dist/index.d.ts",
