--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/abdelfattahradwan/svelte-image-viewer.git"
+    "url": "git+https://github.com/abdelfattahradwan/svelte-image-viewer.git"
   },
   "license": "MIT",
   "keywords": [
