chore: add prepare script to sync Svelte Kit

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "responsive-gallery"
   ],
   "scripts": {
+    "prepare": "svelte-kit sync",
     "dev": "vite dev",
     "build": "vite build && npm run package",
     "preview": "vite preview",
