--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     ".": {
       "types": "./dist/index.d.ts",
       "svelte": "./dist/index.js"
+    },
+    "./legacy": {
+      "types": "./dist/legacy.d.ts",
+      "svelte": "./dist/legacy.js"
     }
   },
   "files": [
